<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/CreationMeeting"
    android:gravity="center"
    tools:context=".ui.AddMeetingActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/veuillez_cr_er_un_meeting"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"/>




    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/dateSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/choisir_une_date" />

        <Button
            android:id="@+id/buttonDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/selectionner_une_date" />

        <TextView
            android:id="@+id/timeSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/choisir_une_heure" />

        <Button
            android:id="@+id/buttonTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/selectionner_une_heure" />

        <TextView
            android:id="@+id/userSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/choisir_les_participants" />

        <Button
            android:id="@+id/buttonUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/selectioner_les_participants" />


        <Spinner
            android:id="@+id/chooseRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sujetMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/sujet_du_meeting"
            android:maxLength="@integer/material_motion_duration_long_1"
            android:text="" />


        <TextView
            android:id="@+id/meetingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dur_e_pr_vu_du_meeting" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:id="@+id/SetTime"
                android:inputType="time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/heure_s" />
        </LinearLayout>


        <Button
            android:id="@+id/validationMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valider" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>