<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_meeting_list_activity"
        android:icon="@drawable/ic_filter_list_24"
        android:title="Filtre"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:orderInCategory="1"
                android:id="@+id/filterDate"
                android:title="Filtre Date"
                app:showAsAction="never" />

            <item
                android:orderInCategory="2"
                android:id="@+id/filterRoom"
                android:title="Filtre Salle"
                app:showAsAction="never" />

            <item
                android:orderInCategory="2"
                android:id="@+id/reset_filter"
                android:title="Annuler les filtres"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>